<?xml version="1.0"?>
<package format="2">
  <name>ros_wrapper</name>
  <version>0.1.0</version>
  <description>ROS wrapper for TASGNSS</description>
  <maintainer email="run-zhi.hu@connect.polyu.hk">Hu Runzhi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>